--- a/lapista/lapista_build/detail.html
+++ b/lapista/lapista_build/detail.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/resource/common/iu.css">
-    <link rel="stylesheet" type="text/css" href="/resource/css/pages/detail.css">
-    <script type="text/javascript" src="//cdn.iueditor.org/js/iueditor-2.1.js"></script>
-    <script type="text/javascript">window.IUEditor || document.write('<script src="//s3.iueditor.org/js/iueditor-2.1.js">\x3C/script>')</script>
+    <link rel="stylesheet" type="text/css" href="/resource/common/iu.css?iuv=1.3">
+    <link rel="stylesheet" type="text/css" href="/resource/css/pages/detail.css?iusha=eb40588">
+    <script type="text/javascript" src="//cdn.iueditor.org/js/iueditor-2.1.js" defer></script>
     <!--[if lt IE 9]>
       <script>
         document.createElement("header" );
