--- a/lapista/lapista_build/result.html
+++ b/lapista/lapista_build/result.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/resource/common/iu.css">
-    <link rel="stylesheet" type="text/css" href="/resource/css/pages/result.css">
-    <script type="text/javascript" src="//cdn.iueditor.org/js/iueditor-2.1.js"></script>
-    <script type="text/javascript">window.IUEditor || document.write('<script src="//s3.iueditor.org/js/iueditor-2.1.js">\x3C/script>')</script>
+    <link rel="stylesheet" type="text/css" href="/resource/common/iu.css?iuv=1.3">
+    <link rel="stylesheet" type="text/css" href="/resource/css/pages/result.css?iusha=b164367">
+    <script type="text/javascript" src="//cdn.iueditor.org/js/iueditor-2.1.js" defer></script>
     <!--[if lt IE 9]>
       <script>
         document.createElement("header" );
@@ -128,9 +127,16 @@
               </div>
             </div>
             <div class="iu-box box-15">
-              <div class="iu-text text-17"></div>
               <div class="iu-cell cell">
-                <p>March. 04. 2017 ~ March. 18. 2017.</p>
+                <p>~</p>
+              </div>
+              <div class="iu-text text-17"></div>
+              <div class="iu-html html-126">
+                <div style="text-align:center;">
+                <p>{{depday}}</p></div>
+              </div>
+              <div class="iu-html html-127">
+                <div style="text-align:center;"> {{arrday}} </div>
               </div>
               <div class="iu-cell cell-19">
                 <p>From : Seoul(ICN)</p>
@@ -309,6 +315,14 @@
                   <p><span style="color: #ffffff; font-size: 12px;">5 nights</span></p>
                 </div>
               </div>
+              <div class="iu-text text-125"></div>
+              <div class="iu-html html">
+                <div style="text-align:center;"> 
+                <p>{{adult_num}}</p>
+                <p>{{kid_num}}</p>
+                </div>
+              </div>
+              <div class="iu-box box-129"></div>
             </div>
           </div>
         </section>
